# FFMpegTestCmake

app/: build.gradle
app/src/androidTest/java/com/jangleapp/ffmpegtestcmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/jangleapp/ffmpegtestcmake/: DebugLog.java  MainActivity.java  Model.java  VideoListAdapter.java  VideoListItem.java  VideoListViewHolder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jangleapp/ffmpegtestcmake/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
kit/: .gitignore  build.gradle
kit/src/main/: AndroidManifest.xml
kit/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  native-lib2.cpp  native-libc2.c
kit/src/main/java/com/jangleapp/kit/: AsyncCommandExecutor.java  Command.java  CommandBuilder.java  DebugLog.java  LogLevel.java  ProcessingListener.java  VideoCommand.java  VideoCommandBuilder.java  VideoKit.java  VideoProcessingResult.java
